/openpay: Auto stash before merge of "feature/openpay" and "origin/feature/openpay"

--- a/resources/views/layouts/main.pug
+++ b/resources/views/layouts/main.pug
@@ -160,7 +160,7 @@ html(lang="en")
 
             var paymentForm = $("#payment-form");
             var paymentformData = paymentForm.serialize();
-            $('#name_error').html( "" );
+            /* $('#name_error').html( "" );
             $('#lastname_error').html( "" );
             $('#email_error').html( "" );
             
@@ -209,7 +209,7 @@ html(lang="en")
                   conseol.log(data);
                   $("#pay-button").removeAttr('disabled');
                 }
-            });
+            }); */
           };
 
           var error_callbak = function(response) {
