--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -175,5 +175,5 @@ block content
                     p.grey-text Transacciones realizadas vía:
                     img.img-fluid(src="/img/openpay.png")
                 div.text-center.mt-4.mb-2
-                  button#pay-button.btn.btn-warning.btn-rounded(type="submit") Donar
-                    i.fa.fa-flash.ml-2
+                  button#pay-button.btn.btn-warning.btn-rounded(type="submit" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Procesando Pago") Donar 
+                    i#icon.fa.fa-flash.ml-2
