--- a/resources/views/layouts/main.pug
+++ b/resources/views/layouts/main.pug
@@ -1,11 +1,12 @@
 doctype html
 html(lang="en")
   head
-    title Por la libre
+    title Por La Libre
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     
+    link(rel="shortcut icon" type="image/png" href="img/logo.png")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.css")
